--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@jsview/core": "^0.7.1",
     "@material/mwc-button": "^0.15.0",
     "@material/mwc-formfield": "^0.15.0",
+    "@material/mwc-icon-button": "^0.15.0",
     "@material/mwc-list": "^0.15.0",
     "@material/mwc-select": "^0.15.0",
+    "@material/mwc-snackbar": "^0.15.0",
     "@material/mwc-switch": "^0.15.0",
     "@material/mwc-textfield": "^0.15.0",
     "@open-wc/lit-helpers": "^0.3.11"
