--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@jsview/core": "^0.8.0",
     "@material/mwc-button": "^0.15.0",
     "@material/mwc-circular-progress": "^0.18.0",
+    "@material/mwc-dialog": "^0.15.0",
     "@material/mwc-formfield": "^0.15.0",
     "@material/mwc-icon-button": "^0.15.0",
     "@material/mwc-list": "^0.15.0",
