--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@material/mwc-formfield": "^0.15.0",
     "@material/mwc-icon-button": "^0.15.0",
     "@material/mwc-list": "^0.15.0",
+    "@material/mwc-menu": "^0.15.0",
     "@material/mwc-select": "^0.15.0",
     "@material/mwc-snackbar": "^0.15.0",
     "@material/mwc-switch": "^0.15.0",
