set jsview as peer dep

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "deploy": "cd ./dist && yarn publish"
   },
   "dependencies": {
-    "@jsview/core": "^0.10.0",
     "@material/mwc-button": "^0.15.0",
     "@material/mwc-circular-progress": "^0.18.0",
     "@material/mwc-dialog": "^0.15.0",
@@ -39,6 +38,9 @@
     "@material/mwc-switch": "^0.15.0",
     "@material/mwc-textfield": "^0.15.0",
     "@open-wc/lit-helpers": "^0.3.11"
+  },
+  "peerDependencies": {
+    "@jsview/core": "^0.10.1"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^2.0.0",
